src/objects/ContactEngagement__c.object
<CustomObject>
    <description>CORE - used to track engagement with contacts and assets (Products in Use)</description>
    <fields>
        <fullName>Contact__c</fullName>
        <description>CORE - links the record to the associated Contact</description>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contact Engagement</relationshipLabel>
        <relationshipName>Contact_Engagements</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Demonstrated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>CORE - signifies if product has been demonstrated</description>
        <label>Demonstrated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Demonstration_Date__c</fullName>
        <description>CORE - date of demo</description>
        <label>Demonstration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Engagement__c</fullName>
        <description>CORE - Contact Engagement picklist</description>
        <label>Engagement</label>
        <picklist>
            <picklistValues>
                <fullName>0. No interest/not applicable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1. Passive</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. Promoter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3. Super User</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_In_Use__c</fullName>
        <description>CORE - tracks the Product in Use with the Contact</description>
        <label>Product In Use</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Contact Engagement</relationshipLabel>
        <relationshipName>Contact_Engagements</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Contact Engagement</label>
    <nameField>
        <displayFormat>CE-{00000}</displayFormat>
        <label>Contact Engagement Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contact Engagements</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Contact_Engagement_Date_Mandatory</fullName>
        <active>true</active>
        <description>CORE - If the demonstrated check box is true then the Demonstration Date must be populated.</description>
        <errorConditionFormula>AND (
 Demonstrated__c  = True,
  ISBLANK(Demonstration_Date__c))</errorConditionFormula>
        <errorDisplayField>Demonstration_Date__c</errorDisplayField>
        <errorMessage>If the &apos;Demonstrated&apos; check box is true then the Demonstration Date must be populated.</errorMessage>
    </validationRules>
</CustomObject>